again info added

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>This is Github Page</h1>
     <h2>git is a developer platform that allows developers to create, store, manage and share their code. It uses Git software, providing the distributed version control of Git plus access control, bug tracking, software feature requests, task management, continuous integration, and wikis for every project.[7] Headquartered in California, it has been a subsidiary of Microsoft since 2018.</h2>
+    <h3>It is a version control system</h3>
 </body>    
 </html>
