--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>This is Github Page</h1>
     <h2>git is a developer platform that allows developers to create, store, manage and share their code. It uses Git software, providing the distributed version control of Git plus access control, bug tracking, software feature requests, task management, continuous integration, and wikis for every project.[7] Headquartered in California, it has been a subsidiary of Microsoft since 2018.</h2>
     <h3>It is a version control system</h3>
+    <h3>The GitHub service was developed by Chris Wanstrath, P. J. Hyett, Tom Preston-Werner, and Scott Chacon using Ruby on Rails, and started in February 2008. The company, GitHub, Inc., has existed as of 2007 and is located in San Francisco.</h3>
 </body>    
 </html>
